psionic box collapsing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.maxTokenizationLineLength": 100000
+    "editor.maxTokenizationLineLength": 100000,
+    "editor.minimap.enabled": false
 }
